[package]
name = "ax25"
version = "0.2.0"
authors = ["Thomas Karpiniec <tk@1.21jiggawatts.net>"]
description = "Utilities for Packet Radio in Rust. AX.25 encoding/decoding and radio interfacing."
repository = "https://github.com/thombles/ax25-rs"
keywords = ["amateur", "radio", "packet", "ham"]
categories = ["network-programming"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
libc = "0.2"
snafu = "0.6"

[dev-dependencies]
chrono = "0.4"
